--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 		<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1">
-			<script type="text/javascript" src="js/page.js"></script>
+			<script  src="js/page.js"></script>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
 	  <div class="footer_title">Want to join us?</div>
 	  <div class="footer_contact">
 	  	<div class="footer_contact-maps">
-	  	<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A8dec399b8575ebda82bc86d4ef2e6a26ae106de2dca58f6e47e2f3591095d3d6&amp;width=470&amp;height=260&amp;lang=ru_RU&amp;scroll=true"></script>
+	  	<script  async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A8dec399b8575ebda82bc86d4ef2e6a26ae106de2dca58f6e47e2f3591095d3d6&amp;width=470&amp;height=260&amp;lang=ru_RU&amp;scroll=true"></script>
 	  	</div>
 	  	<div class="footer_contact-form">
 	  		<div class="contact_form-blockone">
@@ -66,7 +66,7 @@
 
 	  </div>
 	  <div class="footer_bottom">
-	  	<div class="footer_adress">185 Greenwich High Road </br>London SE10 8JA</br> United Kingdom</br> 0044 987654321</div>
+	  	<div class="footer_adress">185 Greenwich High Road <br>London SE10 8JA<br> United Kingdom<br> 0044 987654321</div>
 	  	
 	  </div>
 		<div class="footer_icon">
